Bug 1106252 - Make nsImageFrame's icon loading code more robust. r=tn